--- a/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
+++ b/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A deeper look into Arbitrum Nitro
-created: '2023-10-31T12:46:40.206Z'
+created: '2023-10-31T13:11:18.920Z'
 guideType: onboarding
 key: arbitrum-nitro-arbitrum-university-560
 name: 'Arbitrum Nitro '
@@ -220,67 +220,70 @@ steps:
     stepItems: []
     uuid: e49c619f-5960-4060-9b89-cdd09521cf36
   - content: >-
-      ## Working of Arbitrum Nitro
+      ## Dispute Resolution
 
 
-      In simple terms, let's understand how Arbitrum works. Arbitrum works by
-      allowing developers to create smart contracts and submit transactions to
-      its inboxes. It uses optimistic rollup to process transactions off-chain,
-      while still publishing a small amount of data on the layer one network for
-      validation. Nitro offers various features that enhance performance, reduce
-      costs, and ensure compatibility with Ethereum. Some of the features are:
+      Interactive fraud proofs are a crucial aspect of optimistic rollups, which
+      are a type of blockchain design. When disputes arise between participants,
+      there are two main options to resolve them: interactive proving or
+      re-executing transactions. In the case of Arbitrum, interactive proving is
+      used because it is considered more efficient and flexible.
 
 
-      ### Optimistic Rollup
-
-      Developers create smart contracts and send transactions to Arbitrum's
-      inboxes. These transactions have an impact on how Arbitrum handles them
-      and its overall state. To process Ethereum transactions, Arbitrum uses a
-      technique called optimistic rollup. This technique improves processing
-      speeds by moving transaction data off-chain. However, unlike other
-      sidechains, Arbitrum still publishes a small amount of data on the
-      decentralized layer one network for validation, ensuring security.
+      ### Interactive Fraud Proof
+       
+      The concept behind interactive proving is that the participants in the
+      dispute engage in a back-and-forth protocol. This protocol is overseen by
+      a contract on the main Ethereum chain (L1 contract) and aims to resolve
+      the dispute with minimal work required from the L1 contract. 
 
 
-      Optimistic rollups do not publish proofs of validity for on-chain
-      transaction batches. Instead, they assume that off-chain transactions are
-      valid. This sets them apart from zero-knowledge rollups, which provide
-      cryptographic proofs of validity for off-chain transactions. Arbitrum
-      Nitro, which is compiled to WASM, allows for the use of standard languages
-      and tools instead of Arbitrum Classic's AVM architecture. Additionally,
-      Offchain Labs has rewritten ArbsOS components in Go to facilitate
-      cross-chain communication and reduce expenses on the layer one network.
+      ### Process of Interactive Fraud Proof
 
 
-      ### Sequencing 
+      To begin the process, if a party claims that the chain will produce a
+      certain result, they will post two claims of smaller size that combine to
+      yield their initial claim. The other party then chooses one of their
+      claims to challenge. This process continues, cutting the dispute in half
+      at each stage, until they are disagreeing about a single step of
+      execution. At this point, the L1 referee examines the instruction and
+      determines whether the first party's claim is correct.
 
 
-      First, it creates a single ordered sequence of all transactions and
-      commits to that sequence. Then, a deterministic state transition function
-      processes these transactions in that order. 
+      ## Advantages of Interactive Fraud proof
 
 
-      ### Based of Go-Ethereum
+      ### Greater Efficiency
 
 
-      Nitro leverages the core code of go-Ethereum (Geth), ensuring
-      compatibility with Ethereum's data structures, formats, and virtual
-      machines. It separates proving from execution by compiling the source code
-      twice, once for proving (portability and security) and once for execution
-      on a Nitro node (speed optimization).
+      The key principle behind interactive proving is that both parties should
+      do as much work as possible off-chain to resolve their dispute. This
+      approach is more efficient than re-executing transactions because it
+      allows a rollup block to contain only a single claim about the end state
+      of the chain, rather than requiring a state claim for each transaction
+      within the block. This reduces the L1 footprint and overall cost.
 
 
-      ### Seperate Execution from Proving
+      ### Quicker Actions
 
 
-      Using an optimistic rollup protocol with interactive fraud proofs, Nitro
-      settles transactions on the Layer 1 Ethereum chain. The processing of
-      transactions in Nitro involves the sequencer accepting or rejecting them
-      immediately. Nitro offers a unique combination of features, including
-      advanced calldata compression, separate contexts for execution and fault
-      proving, Ethereum L1 gas compatibility, additional L1 interoperability,
-      and safe retryables.
-    name: How does it work?
+      Interactive proving also has advantages in the pessimistic case. The L1
+      referee only needs to check that both the parties' actions have the right
+      shape, rather than emulating the execution of an entire transaction. This
+      saves computational resources and time. Additionally, interactive proving
+      allows for a higher gas limit per transaction, which can be beneficial in
+      certain scenarios.
+
+
+      ### Higher Flexibility
+
+
+      Interactive proving offers more implementation flexibility compared to
+      reexecution approaches. It only requires the ability to verify a one-step
+      proof on Ethereum, whereas reexecution is limited by the capabilities of
+      the Ethereum Virtual Machine (EVM). The design of Arbitrum is heavily
+      influenced by the opportunities presented by interactive proving.
+    name: Dispute Resolution in Nitro
     stepItems: []
     uuid: 664a3e8e-12ae-44f4-a078-025b15e01c10
   - content: ''
