--- a/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
+++ b/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A deeper look into Arbitrum Nitro
-created: '2023-10-31T13:11:18.920Z'
+created: '2023-10-31T13:26:47.592Z'
 guideType: onboarding
 key: arbitrum-nitro-arbitrum-university-560
 name: 'Arbitrum Nitro '
@@ -345,8 +345,12 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: ca041520-b639-4eab-b2c7-37b09560b6ea
-  - content: >-
+  - content: >+
       - https://docs.arbitrum.io/why-nitro
+
+
+      -
+      https://docs.arbitrum.io/inside-arbitrum-nitro/#:~:text=Nitro%20is%20a%20major%20upgrade,of%20data%20posted%20to%20L1
 
 
       -
@@ -355,9 +359,6 @@ steps:
 
       - https://chainstack.com/arbitrum-nitro-an-overview/#3-nitro-vs-classic
 
-
-      -
-      https://docs.arbitrum.io/inside-arbitrum-nitro/#:~:text=Nitro%20is%20a%20major%20upgrade,of%20data%20posted%20to%20L1
     name: References
     stepItems: []
     uuid: d10846b3-3be8-43e0-9e3b-c8a48b29b98a
