--- a/src/guides/main/guides.yaml
+++ b/src/guides/main/guides.yaml
@@ -1,3 +1,4 @@
 guides:
   - introduction-to-arbitrum-arbitrum-university-794.yaml
   - arbitrum-nitro-arbitrum-university-560.yaml
+  - introduction-to-stylus-arbitrum-university-536.yaml
